--- a/src/views/blog/secret/diary/2023/09/07.md
+++ b/src/views/blog/secret/diary/2023/09/07.md
@@ -1,5 +1,5 @@
 ---
-title: 07
+title: 开发个人网站ing~
 description: 
 date: 2023-09-07
 lang: en
@@ -9,4 +9,8 @@ tags: diary
 ---
 [[toc]]
 
-### 测试测试
+最近这段时间在开发我的个人网站，也着手于记录我这位普通人的每日。
+
+希望可以坚持下去，万事只怕开头难。
+
+相信自己！奥里给！
