feat:tools card

--- a/src/views/blog/secret/diary/2023/09/13.md
+++ b/src/views/blog/secret/diary/2023/09/13.md
@@ -13,3 +13,26 @@ tags: diary
 
 😶 无语子！！！ 早起好难哟
 
+终于完成了TodoList v 1.0 啦 后面再加功能和样式
+
+现在 再把工具栏的卡片样式 做下 然后 就做第二个工具啦 是 收藏工具~~~
+
+目前因为没接服务器 所以一切从简 
+
+搞完两个 就开始我每日计划 计划部署 
+
+还有就是每日作息 结合todolist 自动发布 每日作息 提醒 这些都是准备做的
+
+明天早起早起早起！！！
+
+每天都聊胜于无 主要是感觉还是没开始学习 全都是准备阶段 不过卯足劲发力也是不错的！！
+
+打好基础！
+
+还是有个BUG 就是 创建空间的时候 有几率出现重复Index的 要处理一下 估计是创建太快导致  加个防抖把！
+
+最近把月圆之夜打了打。从初中还是高中就开始玩了，一直没打到最后，确实挺好的，build很好玩，职业还没有开完，每个星期打一个角色。
+
+他们最近还上线了联机的酒馆模式，好玩~,就是套路万变不离其中啊，成长yyds！
+
+巫师3也没有时间打，好烦啦，最近看老马打街霸6，搞得我也想买个玩玩，不过就有点小贵，不太好搞唉~
