feat: add types of the projects & init favorites structor

--- a/src/views/blog/secret/diary/2023/09/18.md
+++ b/src/views/blog/secret/diary/2023/09/18.md
@@ -14,3 +14,19 @@ tags: diary
 ### 位置：深圳
 
 ### 天气：小晒！
+
+今天过得不错！老板开始给我们画饼了！饼很香，好想吃啊！
+
+希望同事们能够加把劲哈哈！！！加油！！！
+
+最近，小黄片看多了，欲望有点多！尽管我知道不能这样，不能那样！
+
+可不就这样，我才是人类。
+
+但总有一句话激励着我，我的意志能够击穿顽石！！！
+
+加油呀！！！过上自己想过的生活！！！
+
+目前，个人网站开发进度还行，然后工作上有点小偷懒了，先把工作上的事情搞好，再搞自己的。
+
+把老板的饼吃干净！！！
