fix: srgb texture color

--- a/src/views/blog/product/2023-09-21-01.md
+++ b/src/views/blog/product/2023-09-21-01.md
@@ -7,3 +7,111 @@ duration: ∞
 type: product
 ---
 [[toc]]
+
+> 文章源: [不知道产品分析怎么做？收下这份分析思路](https://www.inneed.club/articles/detail/pkx0ee60ew)
+
+## 产品分析是什么？
+
+顾名思义，就是对某产品，进行系统的、多维度的分析，并最终完成一份逻辑清晰，伏鹤客观事实的商业报告。
+
+## 产品分析的目标
+
+产品分析的好处很多，不仅能帮助我们解决当前的问题，也可以帮助设计师锻炼自己的逻辑思维能力，产品能力以及业务能力，是升职加薪的必备技能。
+
+在不同的场景、时期、战略上，产品分析的侧重点就不同，而且留给我们的分析时间也不可能足够充足的，所以也要将精力集中在最重要的事情上，提升效率，才可以真正解决问题。
+
+## 产品分析的内容
+
+![思维导图](https://cdn.jsdelivr.net/gh/senong2000/image/1668269631980340.png)
+
+产品分析中还包竞品分析、运营分析、交互分析、视觉分析、文案分析等分支
+
+### 一、 产品的基本信息
+
+下载和体验它，并且能用一句话来概括它的功能，然后通过该功能解决了用户什么样的需求
+
+它所处的行业目前的状态，是否规模连年上升，有什么重量级新闻或者革新，未来的发展趋势是什么
+
+对于一些新上线不太久的应用，通常会带有非常明显的初创团队烙印，可能有一些匪夷所思的交互或者功能，这时候在应用上浪费时间干想是没有用的，可以花点时间在网上找找创始成员的履历，会对我们认识应用有更大的帮助。比如**拼多多创始人**在上线前有 “拼好货” 的多年积累，产品模式是经过检验的产物，有大量相似的特征
+
+### 二、 用户研究
+
+用户研究这个名词出现得非常频繁，想不看见都难，它是专业产品团队必备的项目准备工作。用户研究的方式和产出物多种多样，通常我们会建立清晰的目标画像找出目标用户，然后对他们进行访谈、调研，设计可用性测试、眼动测试等等，帮助我们更好的推出可以被用户喜爱的产品。
+
+用户画像即总结核心用户多个纬度的特征，主要分成三个部分。
+
+1. 生理
+   生理主要就是用户的年龄、性别、身高或体重等特性，外在的，内在的则是
+2. 外在
+   诸如学历、工作履历、所处城市、薪资状况等可以直接收集的内容
+3. 内在
+   性格、爱好、行为（喜好女装之类的……）等等和关联主观特征的内容。
+
+
+### 三、用户体验要素
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20230921172112.png)
+
+**战略层：**
+战略层指的是产品在宏观、商业层面上的的考虑
+
+报告中没有充足的把握时就不要在这个问题上侃侃而谈，只需要回答，一款什么样的产品才可以满足用户的需求获得商业上的成功。
+
+**范围层：**
+战略层可以获得的信息通常是一个比较宏观、含糊的概念，所以，我们要来制定更具体的方案，明确产品应该包含那些功能和服务，规划产品功能要覆盖的范围。
+
+比如提供奶茶的外卖服务 APP，初期我们的功能包含选择店铺商品、加入购物车、交易结算系统，但不包含资讯推送、晒单社区等功能。
+
+所以，范围层就是将该产品提供的最重要的服务、产品内容罗列出来。
+
+
+**结构层：**
+这就是一个产品的功能或者信息结构，通常我们可以用思维导图或者树状图的方式进行梳理。最初级的方法是通过对可视页面的层级做梳理，整理出产品的页面层级结构。
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20230921172535.png)
+
+而更好的方式，是根据产品的几个核心功能建立产品流程图，将操作的结构与逻辑展示出来，绘制这个图表的过程中可以更好的加深我们对产品的理解。
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20230921172551.png)
+
+
+**框架层：**
+
+框架层即页面的布局结构，以及组件层面的交互和展示，一般来说，可以研究产品的主要流程页面，每个页面的布局和信息展示是否合理，操作是否顺畅。
+
+通过 “界面设计”、“导航设计”、“信息设计” 三个角度切入
+
+建议在分析这个界面的时候，只要关注内容从上到下的布局内容有没有契合主题，并且重要的组件中，字段权重能不能很好的被表现出来即可。
+
+比如飞猪的航班页面，页面模块依次是城市、日期、班次列表、排序筛选。在航班列表中，最被用户关注的价格信息得到凸显（证明买机票的用户对价格更敏感），时间作为次级权重元素相对被弱化但依旧易于识别。
+
+**表现层：**
+
+这里就是着重分析产品设计本身的特点了，相对就容易了不少，只要分析配色的方案，设计的一致性，捕捉动效和情感化设计的细节即可。
+
+
+**总结：**
+
+用户体验五要素的分析一样不是散乱的抛出结果而已，如果按原书的方法做分析，肯定也会作出非常复杂的报告，所以我再提炼一次用户体验分析的思路。
+
+通过分析产品的商业目标，进入划分功能和服务的范围，之后根据核心的服务总结主要操作流程，并在最后的交互、布局、设计的几个方向来判断它们是否有益于核心流程，能被用户接受。然后得出结论，如果有益，那么产品符合商业目标的条件，如果没有，则难以达成。
+
+
+### 四、盈利模式
+
+有一些产品本身就有购买要素，或者有付费的项目，那么对它作出分析是非常重要的。因为任何商业产品最终的目的都是为了盈利，所以多数产品会在这方面下足功夫。
+
+如果是电商、外卖、快递这类直接发生交易的应用类型，只要分析产品本身的交流流程即可，相对比较直观。
+
+如果是类似社交、资讯、工具类的应用，往往在盈利点上会比较隐晦，并通常包含较多零散的盈利来源，比如不同位置的广告位，订阅服务，付费道具等等。
+### 五、运营策略
+
+如果不是以工具为导向的产品，通常就有比较重的日常运营。包括用户运营、社区运营、媒体运营、内容运营和活动运营。
+
+有不少产品的迭代是以运营为导向的，我们直接通过产品功能本身去分析它往往得不到理想的结果，所以需要从运营的角度进行切入。
+
+比如每日优鲜这样的生鲜电商，如果仔细研究用过它的服务，就会发现这款产品本身交易的流程乏善可陈，但是出彩的地方是在于层出不穷的运营策略，无论是选品的内容运营或者活动运营上，而这些运营方式才是推动产品的改动和优化的主要因素。
+
+## 总结
+
+没有任何分析的框架可以应对所有要求，所以要在明确我们想要得到的信息以后随机应变，选择需要分析的内容再开始动手。
