fix: mcskineditor framebyframe animation improve broswer fluency

--- a/src/views/blog/secret/diary/2023/10/11.md
+++ b/src/views/blog/secret/diary/2023/10/11.md
@@ -1,7 +1,7 @@
 ---
 title: 我又没忍住！
 description: 
-date: 2023-10-10
+date: 2023-10-11
 lang: en
 duration: ∞
 type: secret
@@ -34,3 +34,5 @@ tags: diary
 今天好像没有什么要写了 努力学习 努力锻炼 ！！！ 健康最重要 
 
 然后就是上班有点小分心了 上班还是要认真一点 搞搞新东西 学学新东西 不要摸鱼啦~~~
+
+time out!
