--- a/src/views/blog/secret/diary/2023/10/13.md
+++ b/src/views/blog/secret/diary/2023/10/13.md
@@ -27,3 +27,10 @@ tags: diary
 
 不要有太大压力 好好学习 好好玩游戏 ！
 
+最近 巴勒斯坦和以色列冲突 几百万人 家无定所 随时有着的生命危险 
+
+虽然有时候会讨厌中国这样内卷的环境 但就是因为我们足够和平我们才有机会内卷哈
+
+周末两天好好规划 录首歌把 然后巩固一下最近学习的知识 继续背单词
+
+然后写写 简历模块 玩玩游戏
