feat: add resume sidebar name

--- a/src/views/blog/product/2023-10-16-01.md
+++ b/src/views/blog/product/2023-10-16-01.md
@@ -8,24 +8,31 @@ type: product
 ---
 [[toc]]
 
-### 一、初认识
+## 一、初认识
 
 在这个周末，我跟朋友在微信聊天的时候，突然发现朋友的名字下面有个红点点特别显眼，有一朵小红花，写着做好事。在我点击之前，我已经能肯定它是跟一些公益活动相关的。
 
-#### 1. 功能流程
+### 1）功能流程
 
 点击后会弹出一个卡片，上面会显示对方的留言，然后可以点赞和评论，左下角有一个快速入口，点击后可以去到对方做公益对应的活动。
 
-#### 2. 解锁小红花状态
+![](https://cdn.jsdelivr.net/gh/senong2000/image/img_v2_e342552c-82a3-46fb-901b-4b1013abda8g.webp)
+
+### 2）解锁小红花状态
 
 再者通过获得小红花捐献或者捐献钱财，都可以解锁小红花状态,然后就会提示是否展示小红花状态
 
 两种展示方式：
 
 - 在和对方聊天的时候展示
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/img_v2_82486441-932c-4d3a-822b-287ce43b9ffg.webp)
+
 - 在你的个人页面也会展示小红花的状态
 
-### 二、承载着希望
+![](https://cdn.jsdelivr.net/gh/senong2000/image/img_v2_23f3ac5d-f375-46e4-9ecc-3e7119f54e9g.webp)
+
+## 二、承载着希望
 
 我为什么认为这是微信最美好的功能，首先是这个功能跟公益相关，其次这个功能可以大大地推进公益活动的进度和提高公益的传播性。
 
@@ -33,7 +40,7 @@ type: product
 
 现在改变更新后，我根据朋友，又引起我的捐献之心，公益成功！这就是这个功能最好的地方。
 
-#### 1） 被动分享
+### 1）被动分享
 
 至于为什么这个功能改变很小，却被我认为大大地推进了公益活动呢
 
@@ -42,6 +49,9 @@ type: product
 因为这个功能把小红花展示出来后，一是利用了人的虚荣心理，大家都是正常人多少会有一些。
 
 “诶，我做好事了哎，我想让别人知道！”
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/img_v2_e58f6a29-8ad0-43bd-8a09-4e2e3693f16g.webp)
+
 
 2. **广告模式**
 
@@ -53,7 +63,9 @@ type: product
 
 还有一半就是交给“我”来完成
 
-#### 2） 主动公益
+![](https://cdn.jsdelivr.net/gh/senong2000/image/img_v2_18b64260-7cef-4141-bcbd-fe1dd1ee005g.webp)
+
+### 2）主动公益
 
 轮到“我”的回合，什么样的“我”可以完成这另一半呢
 
@@ -66,7 +78,9 @@ type: product
 
 无论怎么样其实都是双赢局面，我既可以得到装杯的面子，然后里子又能到有需要的人手中
 
-### 三、结语
+![](https://cdn.jsdelivr.net/gh/senong2000/image/img_v2_11074069-607b-44b9-9642-da82179ebdcg.webp)
+
+## 三、结语
 
 无疑，这个功能是美好的，为孩子们走出山村，为留守儿童和老人生活地更美好，为有病患者提供帮助，为有需芝士提供希望。
 
