feat: add resume introduce structure"

--- a/src/views/blog/think/think-2023-10-19-01.md
+++ b/src/views/blog/think/think-2023-10-19-01.md
@@ -174,3 +174,6 @@ e.g.
 ### 总结
 
 通过波特五力分析，企业可以了解行业的竞争力和吸引力，从而制定相应的竞争策略。例如，如果行业内竞争激烈，企业可以通过差异化产品或服务来脱颖而出；如果供应商谈判能力强，企业可以寻找多个供应商以降低供应风险；如果顾客谈判能力强，企业可以提供更好的客户服务和价值等
+
+## 五、STAR法则
+
