feat:add new resumeData

--- a/src/views/blog/product/product-2023-11-09-01.md
+++ b/src/views/blog/product/product-2023-11-09-01.md
@@ -1,9 +1,135 @@
 ---
-title: ChatGPT如何摧毁AI应用层?
+title: 关于AI
 description: 
-date: 2023-10-16
+date: 2023-11-09
 lang: zh
 duration: ∞
 type: product
 ---
 [[toc]]
+
+## 一、概述
+
+2023年9月份
+
+ChatGPT宣布接入图像、语音等功能，形成多模态
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231112233021.png)
+
+当地时间 11 月 6 日（ 北京时间 7 日凌晨 2 点 ），OpenAI 正式举行了其首届开发者大会，大会时间不长，但内容却是爆炸的。
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231112234134.png)
+
+1. 所支持的文本长度从 32k tokens 升级到了 128k tokens。（ 大约 64000 字中文 ）；
+
+2. 更多的设置和更好的函数调用；
+
+3. 知识库数据从 2021 年 9 月，更新到 2023 年 4 月；
+
+4. 开发者可以调用多模态 API  ：GPT-4 Turbo 图片识别功能、DALL·E 3 的绘图功能，以及文本转语音功能。
+
+5. GPTs 用户可以定制化微调属于自己的模型；
+
+为此 OpenAI 推出了 GPTs, GPTs 是为特定目标量身定制的 GPT 版本。
+
+你可以轻松定制出来一个拥有你专有知识库，特殊操作的 GPT 并发布给其他人使用。
+
+相当于你可以集成提示词指令，外挂数据和 Actions 操作来完成各种任务。
+
+而这个定制的 GPTs，不需要代码，只需要通过自然语言和 ChatGPT 对话就能帮你自动构建出来。
+
+6. 每分钟的 token 速率，增加了一倍；
+
+7. 其中，虽然 GPT-4 Turbo 支持了更长的文本长度，但 token 的价格却来了一波加量不加价，文本输入的单价从 0.03 美元直接降到了 0.01 美元。
+
+8. JSON 模式
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231113212145.png)
+
+9. seed 模式
+    
+10. ChatGPT store
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231112234220.png)
+
+
+他们似乎已经垄断了这个行业，飞速的发展让其他同行跟不上。从单模块到多模态，结合TTS、DALL E3、CodeX，开发OpenAI Store，开放更多参数接口，可以自定义GPT应用，token量大同时单价下降，这一切似乎要迎来了OpenAI独领风骚的大结局。
+
+为此，我们来了解一下它们吧~
+
+## 二、ChatGPT发展历程
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231112232727.png)
+
+补充几点：
+18年 Elon Musk 离开 OpenAI
+19年 微软入股投了10亿美元 加上Azure云端平台
+
+2023年2月16日消息，OpenAI买下了超优质域名AI.com，并将其链接跳转到了ChatGPT。
+当然Elon Musk也入行AI了，直接买下，现在跳转到gork了
+
+https://zhuanlan.zhihu.com/p/646964910
+
+## 三、其他AI产品
+
+### Heygen 
+
+HeyGen是一个ai数字人虚拟人网站,作为一个AIGC网站，用户可以在该平台上使用自带的数字人形象，上传自己的照片或使用AI绘画的人物作为数字人角色，通过文本或语音输入来控制数字人说话或开口说话。用户可以选择使用自带的场景或纯色背景。
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231112234824.png)
+
+### Stable Diffusion
+
+#### webUI
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231112233256.png)
+
+text to image 文生图
+
+image to image 图生图
+
+checkpoint 主模型
+
+lore 辅助模型 带有训练数据 可以同时拥有多个
+
+embedding 辅助生成 控制人物的动作和特征 文本 
+
+vae 滤镜、风格
+
+采样迭代步数
+
+ControlNet 添加额外控制条件
+
+- canny: 边缘检测
+- depth: 深度检测
+- hed:边缘检测
+- mlsd: 线段检测
+- normal_map: 建模识别
+- openpose: 姿势骨骼提取
+- openpose_hand:姿势骨骼+手部
+- scribble: 提取黑白稿
+- fake_scribble: 涂鸦风格提取
+
+sadtalker
+
+https://www.bilibili.com/video/BV1Bc411p7uj/?vd_source=e43b9f359cb01ec7cc2e7b88213c95b1
+
+#### comfyUI
+
+通过将stable diffusion的流程拆分成节点，实现了更加精准的工作流定制和完善的可复现性。但节点式的工作流也提高了一部分使用门槛。
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231112233403.png)
+
+### Ultimate Vocal Remover 5
+
+Ultimate Vocal Remover 5 (UVR5) 是一 款基于深度神经网络的乐器分离软件，通过 训练模型准确地将鼓、贝斯、人声等其他声 部进行分离。并且相较于 RX10 、RipX 和 SpectraLayers 等同类型软件，UVR5 在模型 生成的质量和可选择性上都展现出显著优势。
+
+### GFP-GAN
+
+图像修复工具 
+
+GFP-GAN是一个使用生成对抗网络（GAN）的图像恢复工具。 GAN是一种能够生成新的合成数据的深度学习算法，可以用于恢复和增强图像。GFP-GAN 用于图像恢复任务，例如去噪、去模糊或超分辨率。
+
+### Speaking AI
+
+Speaking Ai，这是来自加州的华人AI创业团队带来的三秒钟克隆语音的技术valle，目前该技术也被openai 最新版的voice 采用，视频中是他们最近上线的一个语音克隆的demo站，中文语音克隆技术做的比较惊艳，目前instance voice cloning 中文效果好于elevenlab
